--- a/main.html
+++ b/main.html
@@ -7,6 +7,57 @@
 </head>
 
 <body>
+	<div>
+	  <button data-ns-test="block-inline-button">Test1</button>
+	  <button data-ns-test="block-inline-button">Test2</button>
+	  Answer: Inline
+	</div>
+	<div>
+		<div data-ns-text="block-inline-div">Test1</div>
+		<div data-ns-text="block-inline-div">Test2</div>
+		Answer:Block
+	</div>
+	<div>
+		<span data-ns-text="block-inline-span">Test1</span>
+		<span data-ns-text="block-inline-span">Test2</span>
+		Answer:inline
+	</div>
+	<div>
+		<p data-ns-text="block-inline-p">Test1</p>
+		<p data-ns-text="block-inline-p">Test2</p>
+		Answer:block
+	</div>
+	<div>
+		<input data-ns-text="block-inline-input">Test1</input>
+		<input data-ns-text="block-inline-input">Test2</input>
+		Answer:inline
+	</div>
+	<div>
+		<cite data-ns-text="block-inline-cite">Test1</cite>
+		<cite data-ns-text="block-inline-cite">Test2</cite>
+		Answer:inline
+	</div>
+	<div>
+		<code data-ns-text="block-inline-code">Test1</code>
+		<code data-ns-text="block-inline-code">Test2</code>
+		Answer:block
+	</div>
+	<div>
+		<h1 data-ns-text="block-inline-code">Test1</h1>
+		<h1 data-ns-text="block-inline-code">Test2</h1>
+		Answer:Block
+	</div>
+	<div>
+		<sup data-ns-text="block-inline-sup">Test1</sup>
+		<sup data-ns-text="block-inline-sup">Test2</sup>
+		Answer:Inline
+	</div>
+	<div>
+		<sub data-ns-text="block-inline-sub">Test1</sub>
+		<sub data-ns-text="block-inline-sub">Test1</sub>
+		Answer:Inline
+	</div>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
