--- a/main.html
+++ b/main.html
@@ -28,8 +28,8 @@
 		Answer:block
 	</div>
 	<div>
-		<input data-ns-text="block-inline-input">Test1</input>
-		<input data-ns-text="block-inline-input">Test2</input>
+		<input data-ns-test="block-inline-input" value="Test1">
+		<input data-ns-test="block-inline-input" value="Test2">
 		Answer:inline
 	</div>
 	<div>
